@@ -1,3 +1,7 @@
+Deluge 1.1.0_RC3 (In Development)
+ GtkUI:
+  * Fix folder renaming to display the change properly
+
 Deluge 1.1.0_RC2 (29 December 2008)
  Core:
   * Fix new version check
